# eos

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .ignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CLAUDE.md  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Doxyfile  License  Makefile.am  README  README.md  SECURITY.md  bootstrap.sh  configure.ac  elrepopackage.spec  eos.spec  eos.spec.in  gdb_eosxd.stacktrace  genversion.sh  maketar.sh  msoffice-save-mitigation.md  test.cmake
ApMon/: Makefile  Makefile.am  bootstrap.sh  configure.ac  eos-apmon.spec  eos-ns-monitor.pl  eos-tx-log.pl  eos-tx-monitor.pl  eos_apmonpl  eosapmon.sh  eosapmond.c  eosnsapmond.c  eostxapmond.c  eostxlog.c  jenkins-build.sh  run.sh
Console/: ConsoleMain.cc  Makefile.am
Namespace/: ContainerMD.cc  ContainerMD.hh  FileMD.cc  FileMD.hh  IContainerMDSvc.hh  IFileMDSvc.hh  IView.hh  MDException.hh  Makefile.am
Sync/: Makefile.am  eosdirsync.cc  eosfilesync.cc
XrdCapability/: Makefile.am  XrdCapability.cc  XrdCapability.hh
XrdCommon/: Makefile.am  XrdCommon.cc  XrdCommonFileId.hh  XrdCommonFileSystem.hh  XrdCommonFmd.cc  XrdCommonFmd.hh  XrdCommonLayoutId.hh  XrdCommonLogging.cc  XrdCommonLogging.hh  XrdCommonMapping.cc  XrdCommonMapping.hh  XrdCommonPath.hh  XrdCommonProc.cc  XrdCommonProc.hh  XrdCommonStatfs.cc  XrdCommonStringStore.cc  XrdCommonStringStore.hh  XrdCommonSymKeys.cc  XrdCommonSymKeys.hh  XrdCommonTiming.hh
XrdFstOfs/: FsckFst.cc  Makefile.am  XrdFstDeletion.hh  XrdFstOfs.cc  XrdFstOfs.hh  XrdFstOfsAdler.hh  XrdFstOfsCRC32.hh  XrdFstOfsChecksum.cc  XrdFstOfsChecksum.hh  XrdFstOfsChecksumPlugins.hh  XrdFstOfsClientAdmin.hh  XrdFstOfsConfig.hh  XrdFstOfsFile.hh  XrdFstOfsLayout.hh  XrdFstOfsLayoutPlugins.hh  XrdFstOfsLoad.cc  XrdFstOfsLoad.hh  XrdFstOfsLock.hh  XrdFstOfsMD5.hh  XrdFstOfsPlainLayout.hh  XrdFstOfsRaid5Layout.cc  XrdFstOfsRaid5Layout.hh  XrdFstOfsReplicaLayout.cc  XrdFstOfsReplicaLayout.hh  XrdFstOfsReplicaParLayout.cc  XrdFstOfsReplicaParLayout.hh  XrdFstOfsSHA1.hh  XrdFstOfsStorage.cc  XrdFstOfsStorage.hh  XrdFstTransfer.cc  XrdFstTransfer.hh  XrdFstVerify.hh  eosfstcheck  eosfstmgmsync
XrdMgmOfs/: Makefile.am  XrdMgmConfigEngine.cc  XrdMgmConfigEngine.hh  XrdMgmFstFileSystem.hh  XrdMgmFstNode.cc  XrdMgmFstNode.hh  XrdMgmMessaging.cc  XrdMgmOfs.cc  XrdMgmOfs.hh  XrdMgmOfsConfigure.cc  XrdMgmOfsSecurity.hh  XrdMgmOfsStat.hh  XrdMgmOfsTrace.hh  XrdMgmPolicy.cc  XrdMgmPolicy.hh  XrdMgmProcInterface.cc  XrdMgmProcInterface.hh  XrdMgmQuota.cc  XrdMgmQuota.hh  XrdMgmVid.cc
XrdMqOfs/: Makefile.am  XrdMqClient.cc  XrdMqClient.hh  XrdMqClientMaster.cc  XrdMqClientTest.cc  XrdMqClientWorker.cc  XrdMqCryptoTest.cc  XrdMqMessage.cc  XrdMqMessage.hh  XrdMqMessaging.cc  XrdMqMessaging.hh  XrdMqOfs.cc  XrdMqOfs.hh  XrdMqOfsFSctl.cc  XrdMqQueueDumper.cc  XrdMqQueueFeeder.cc  XrdMqRWMutex.hh  XrdMqSharedObject.cc  XrdMqSharedObject.hh  XrdMqSharedObjectClient.cc  XrdMqSharedObjectQueueClient.cc  XrdMqTiming.hh
archive/: CMakeLists.txt  const.py  eosarch_reconstruct.py  eosarch_run.py  eosarchived.conf  eosarchived.init  eosarchived.py  eosarchived.service  eosarchived.sysconfig  eosarchived_env.sysconfig  eosarchived_env.sysconfig.in  eosarchiverd  eosarchiverd.example  eosarchiverd.init  eostracker.py  opt-eos-xrootd.pth
auth_plugin/: .emacs.desktop  CMakeLists.txt  ConcurrentQueue.hh  EosAuthOfs.cc  EosAuthOfs.hh  EosAuthOfsDirectory.cc  EosAuthOfsDirectory.hh  EosAuthOfsFile.cc  EosAuthOfsFile.hh  Namespace.hh  ProtoUtils.cc  ProtoUtils.hh  stat_stress.cc
authz/: CMakeLists.txt  XrdCapability.cc  XrdCapability.hh
client/: CMakeLists.txt  Namespace.hh
common/: Access.cc  Access.hh  Assert.hh  AssistedThread.hh  Attr.cc  Attr.hh  Audit.cc  Audit.hh  BehaviourConfig.cc  BehaviourConfig.hh  BufferManager.cc  BufferManager.hh  BuildVersion.hh.in  CLI11.hpp  CMakeLists.txt  CernNfsEmbed.cc  CernNfsEmbed.hh  CernNfsEmbedDetail.hh  ClientAdmin.hh  ClientLock.cc  ClientLock.hh  CloExec.hh  ClockGetTime.cc  ClockGetTime.hh  CommentLog.cc  CommentLog.hh  ConcurrentQueue.hh  ConcurrentStack.hh  Config.cc  Config.hh  Constants.hh  CopyProcess.hh  Counter.hh  CppUnitMacros.h  CrashHandler.cc  CrashHandler.hh  CtaCommon.hh  DBG.hh  DbMap.cc  DbMap.cc.pthread  (+168 more)
console/: CMakeLists.txt  CommandFramework.cc  CommandFramework.hh  ConsoleArgParser.cc  ConsoleArgParser.hh  ConsoleCliCommand.cc  ConsoleCliCommand.hh  ConsoleCompletion.cc  ConsoleCompletion.hh  ConsoleMain.cc  ConsoleMain.hh  ConsoleMainExecutable.cc  ConsolePipe.cc  ConsolePipe.hh  ConsoleTableOutput.hh  GlobalOptions.hh  ICommand.hh  Makefile.am  MgmExecute.cc  MgmExecute.hh  README.md  RegexUtil.cc  RegexUtil.hh  eos-iam-mapfile  eosadmin  eosreport  gridmap-iam.py
dsi/: Makefile.am  configure.ac  dsi_eos.hh  eos-dsi.spec  eos-dsi.spec.in  globus_gridftp_server_eos.cc
etc/: CMakeLists.txt  eos.keytab  eos.systemd.conf  eos@.service  xrd.cf.auth  xrd.cf.fed  xrd.cf.fst  xrd.cf.mgm  xrd.cf.mq  xrd.cf.prefix  xrd.cf.sync
fst/: CMakeLists.txt  Config.cc  Config.hh  Deletion.hh  Fmd.cc  Fmd.hh  FmdAttrMap.cc  FmdAttrMap.hh  FmdAttributeHandler.cc  FmdAttributeHandler.hh  FmdAttributeScanMain.cc  FmdBase.proto  FmdClient.cc  FmdClient.hh  FmdDbMap.cc  FmdDbMap.hh  FmdHandler.cc  FmdHandler.hh  FmdSqlite.cc  FmdSqlite.hh  Fsck.cc  Fsck.hh  FsckFst.cc  FstLoad.cc  Health.cc  Health.hh  Http.cc  Http.hh  HttpServer.cc  HttpServer.hh  ImportScan.hh  InjectionScan.hh  Load.cc  Load.hh  Lock.hh  Makefile.am  Messaging.cc  Messaging.hh  MgmCommunicator.cc  MgmCommunicator.hh  (+30 more)
fuse/: AuthIdManager.cc  AuthIdManager.hh  CMakeLists.txt  DirCache.cc  DirCache.hh  FuseCacheEntry.cc  FuseCacheEntry.hh  GlobalInodeTranslator.cc  GlobalInodeTranslator.hh  MacOSXHelper.hh  Makefile.am  NegStatCache.cc  NegStatCache.hh  ProcCache.cc  ProcCache.hh  ProcCacheC.cc  ProcCacheC.h  ProcCacheTest.cc  SyncResponseHandler.hh  configure.ac  eos-fuse.spec  eos-fuse.spec.in  eosd.c  eosfs.c  eosfs.start  eosfuse.cc  (+11 more)
fuse-beryl/: Makefile.am  eosd.c  eosfs.c  xrdposix.hh
(+4221 files in other folders)
